put ALLOWED_HOSTS and CSRF_TRUSTED_ORIGINS on .env

--- a/.env-example
+++ b/.env-example
@@ -9,7 +9,8 @@ DEBUG = 0
 
 CHROMEDRIVER_NAME = 'chromedriver.exe'
 
-# 0 = False; 1 = True => if headless is false, open the browser; if it is true, the browser is not shown
+# 0 = False; 1 = True => if headless is false, open the browser;
+# if it is true, the browser is not shown
 SELENIUM_HEADLESS = 1
 
 # Database settings
@@ -25,3 +26,7 @@ DATABASE_USER = "user"
 DATABASE_PASSWORD = "password"
 DATABASE_HOST = "127.0.0.1"
 DATABASE_PORT = "5432"
+
+# Comma separated values
+ALLOWED_HOSTS = '127.0.0.1, localhost'
+CSRF_TRUSTED_ORIGINS = 'https://localhost'
